2006-06-22 Neil Williams <linux@codehelp.co.uk>

	* qof/qofdate.c,
	qof/test/test-date.c : Fixing a few more tests.

2006-06-20 Neil Williams <linux@codehelp.co.uk>

	* qof/test/test-date.c : Comment out failing
	tests during further work on qoftime and qofdate.

2006-05-31 Neil Williams <linux@codehelp.co.uk>

	* configure.in,
	qof/Makefile.am,
	qof/deprecated.c,
	qof/qofdate.c,
	qof/qofdate.h,
	qof/qofstrftime.c,
	qof/qofstrftime.h,
	qof/qofstrptime.c,
	qof/qofstrptime.h,
	qof/qoftime.c,
	qof/qoftime.h,
	qof/test/Makefile.am,
	qof/test/test-date.c: Moving lib/libtime code
	into main library.

2006-05-31 Neil Williams <linux@codehelp.co.uk>

	* qof/deprecated.c,
	qof/deprecated.h : Fixing missing symbols.

2006-05-31 Neil Williams <linux@codehelp.co.uk>

	* lib/libtime/Makefile.am : New files added.
	* lib/libtime/qofgmtime.c : Ensure qof_date_from_qtime 
	returns a valid date, or NULL
	* lib/libtime/qofstrftime.c : Tweak.
	* lib/libtime/qofstrftime.h : Tweak.
	* lib/libtime/qofstrptime.c : New file, based on glibc but
	extended to QOF ranges.
	* lib/libtime/qofstrptime.h : New file.

2006-05-30 Neil Williams <linux@codehelp.co.uk>

	* lib/libtime/qofgmtime.c,
	lib/libtime/qofstrftime.h,
	qof/qofdate.h,
	qof/qoftime.c,
	qof/qoftime.h : Preparing QofDate to/from QofTime routines
	and introducing leap_seconds.

2006-05-29 Neil Williams <linux@codehelp.co.uk>

	* doc/qofdatelocale.txt : Explain restrictions on
	locale-specific date format specifiers.
	* lib/libtime/qofgmtime.c : Rewrite to stop use of
	mktime.
	* lib/libtime/qofstrftime.c : Move to QofDate.
	* lib/libtime/qofstrftime.h : Documentation tweak.
	* qof/qofdate.c : Add detection of locale-specific 
	formats.
	* qof/qofdate.h : Document locale-specific restrictions.
	* qof/qoftime.h : Clarify documentation.

2006-05-28 Neil Williams <linux@codehelp.co.uk>

	* qof/qofdate.c : 
	* qof/qofdate.h : Add qof_date_time_difference
	Add normalising code for QofDate.