@@ -1,6 +1,16 @@
 2006-06-22 Neil Williams <linux@codehelp.co.uk>
 
 	* qof/qofdate.c,
+	qof/qofstrptime.c,
+	qof/test/test-date.c : Implement more tests and
+	allow partial testing of BC dates. BC dates are very 
+	difficult to parse because a minus sign is also a valid 
+	date separator. BC can be handled directly and printed, 
+	some restrictions are inevitable to parse BC date strings.
+
+2006-06-22 Neil Williams <linux@codehelp.co.uk>
+
+	* qof/qofdate.c,
 	qof/test/test-date.c : Fixing a few more tests.
 
 2006-06-20 Neil Williams <linux@codehelp.co.uk>
